--- a/EasyEat/EasyEat/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/EasyEat/EasyEat/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -19,15 +19,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launnchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="uKT-vM-cue">
-                                <rect key="frame" x="0.0" y="10" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="uKT-vM-cue" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Ans-Yf-i0D"/>
-                            <constraint firstItem="uKT-vM-cue" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="D70-3v-gxg"/>
-                            <constraint firstItem="uKT-vM-cue" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="OS9-ra-Xsi"/>
-                            <constraint firstItem="uKT-vM-cue" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="OpG-IK-Gph"/>
+                            <constraint firstAttribute="bottom" secondItem="uKT-vM-cue" secondAttribute="bottom" id="1Fg-u2-cfA"/>
+                            <constraint firstItem="uKT-vM-cue" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="QKH-kF-bvZ"/>
+                            <constraint firstItem="uKT-vM-cue" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WpG-os-Xii"/>
+                            <constraint firstItem="uKT-vM-cue" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Wx5-ug-mfc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
